force-app/main/default/objects/RD_ChangeEvent__e/RD_ChangeEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event to capture record Ids that have been inserted updated</description>
    <label>RD Change Event</label>
    <pluralLabel>RD Change Events</pluralLabel>
</CustomObject>