force-app/main/default/objects/RD_ChangeEvent__e/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>