force-app/main/default/objects/RD_ChangeEvent__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>