force-app/main/default/objects/RD_ChangeEvent__e/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <description>External Reference ID</description>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>